--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "devDependencies": {
     "@types/jest": "29.5.12",
     "jest": "29.7.0",
-    "typescript": "5.3.3",
     "ts-jest": "29.1.2",
-    "ts-node": "10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3"
   }
 }
